kubernetes/argocd/applications/media/apps/tautulli/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Tautulli
    gethomepage.dev/icon: tautulli.png
    gethomepage.dev/href: https://tautulli.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tautulli
    gethomepage.dev/widget.type: tautulli
    gethomepage.dev/widget.url: http://tautulli.media.svc.cluster.local:8181
    gethomepage.dev/widget.key: 967adacc9d6641f081c0c2bad2cc2d29
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - tautulli.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
